# tes

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: comparative_analysis.md  formalization.md  gui.md  project.md
src/: grid.rs  isotope.rs  lib.rs  shape.rs  space.rs  substrate.rs
